--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <!-- ...existing code... -->
+    <meta descrition="Discover cutting-edge web and graphic design solutions at ConnorLove.com. Offering expertise in UI/UX, SEO optimization, and brand-building. Elevate your digital presence with a designer and developer who combines creativity with technology. Explore my portfolio now!">
     <script async src="https://analytics.umami.is/script.js" data-website-id="7eae09d3-db0e-4251-9d89-6baa6436de79"></script>
   </head>
   <body>
